syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";

option go_package = "github.com/openline-ai/openline-customer-os/packages/server/events-processing-proto/gen/proto/go/api/grpc/v1/interaction_event;interaction_event_grpc_service";

message UpsertInteractionEventGrpcRequest {
  string id = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string content = 4;
  string contentType = 5;
  string identifier = 6;
  string channel = 7;
  string channelData = 8;
  string eventType = 9;
  bool hide = 10;
  google.protobuf.Timestamp createdAt = 11;
  google.protobuf.Timestamp updatedAt = 12;
  optional string belongsToIssueId = 13;
  optional string belongsToSessionId = 14;
  SourceFields sourceFields = 15;
  ExternalSystemFields externalSystemFields = 16;
  Sender sender = 17;
  repeated Receiver receivers = 18;
}

message Participant {
  string id = 1;
  oneof participantType {
    User user = 2;
    Contact contact = 3;
    Organization organization = 4;
  }
}

message User {
  // Fields specific to User, if any.
}

message Contact {
  // Fields specific to Contact, if any.
}

message Organization {
  // Fields specific to Organization, if any.
}

message Sender {
  Participant participant = 1;
  string relationType = 2;
}

message Receiver {
  Participant participant = 1;
  string relationType = 2;
}

message RequestGenerateSummaryGrpcRequest {
  string tenant = 1;
  string interactionEventId = 2;
  string loggedInUserId = 3;
}

message RequestGenerateActionItemsGrpcRequest {
  string tenant = 1;
  string interactionEventId = 2;
  string loggedInUserId = 3;
}

message InteractionEventIdGrpcResponse {
  string id = 1;
}

service interactionEventGrpcService {
  rpc RequestGenerateSummary(RequestGenerateSummaryGrpcRequest) returns (InteractionEventIdGrpcResponse);
  rpc RequestGenerateActionItems(RequestGenerateActionItemsGrpcRequest) returns (InteractionEventIdGrpcResponse);
  rpc UpsertInteractionEvent(UpsertInteractionEventGrpcRequest) returns (InteractionEventIdGrpcResponse);
}
